# KAQU_2025

./: .gitignore  LICENSE  README.md
kaqu/: CMakeLists.txt  package.xml
kaqu/launch/: kaqu.launch.py
kaqu_controller/: package.xml  setup.cfg  setup.py
kaqu_controller/kaqu_controller/KaquCmdManager/: AnglePublisher.py  ContactSubscriber.py  IMU_INS_Node.py  JOYSTICKMAP.msg  KaquParams.py  RobotManagerNode.py  TorquePublisher.py  TorqueSubscriber.py  test.py
kaqu_controller/kaqu_controller/KaquIK/: InverseKinematics.py  KinematicsCalculations.py
kaqu_controller/kaqu_controller/Kaquctrl/: ContactUtils.py  CrawlGaitController.py  GaitController.py  LowPassFilter.py  PIDController.py  RestController.py  SpeedTrotController.py  StairGaitController.py  TrotGaitController.py
kaqu_gazebo_sim/: CMakeLists.txt  package.xml
kaqu_gazebo_sim/config/: kaqu_joint_controller.yaml
kaqu_gazebo_sim/description/: consts.xacro  gazebo_ros2_control_plugin.xacro  kaqu.gazebo  kaqu.trans  kaqu.urdf.xacro  kaqu_imu.xacro  kaqu_joint.xacro  kaqu_link.xacro
kaqu_gazebo_sim/description/meshes/: base_link.stl  fl_hip_1.stl  fl_leg1_1.stl  fl_leg4_1.stl  fl_leg4_1_0.stl  fr_hip_1.stl  fr_leg1_1.stl  fr_leg4_1.stl  fr_leg4_1_0.stl  rl_hip_1.stl  rl_leg1_1.stl  rl_leg4_1.stl  rl_leg4_1_0.stl  rr_hip_1.stl  rr_leg1_1.stl  rr_leg4_1.stl  rr_leg4_1_0.stl
kaqu_gazebo_sim/description/sensors/: kaqu_contact_feet.xacro  kaqu_force_torque.xacro  kaqu_ft.xacro  kaqu_imu.xacro
kaqu_gazebo_sim/launch/: kaqu_gazebo_sim.launch.py
kaqu_gazebo_sim/models/ramp/: model.sdf
kaqu_gazebo_sim/models/stairs/: model.sdf
kaqu_gazebo_sim/models/stairs_copy/: model.sdf
kaqu_gazebo_sim/rviz/: kaqu_rviz.launch.py
kaqu_gazebo_sim/src/: kaqu_gazebo_joint_controller.cpp
kaqu_gazebo_sim/worlds/: kaqu_ground.world
kaqu_hardware_interfacing/: Team2.md  package.xml  setup.cfg  setup.py
kaqu_hardware_interfacing/kaqu_hardware_interfacing/: bulk_read_write.py
kaqu_input_manager/: CMakeLists.txt  README.md  package.xml
kaqu_input_manager/launch/: kaqu_teleop.launch.py
kaqu_input_manager/scripts/: joystick_gui_node.py
kaqu_input_manager/src/: kaqu_definitions.hpp  kaqu_teleop_joy.cpp
kaqu_llm/: map.json  navigate.py
kaqu_llm/data/: map.json
kaqu_llm/navigation_controller/: llm.py  navigate.py  stt.py
kaqu_llm_new/: package.xml  setup.cfg  setup.py
kaqu_llm_new/kaqu_llm_new/: README.md  llm.py
kaqu_llm_new/kaqu_llm_new/data/: destination.json
kaqu_msgs/: CMakeLists.txt  README.md  package.xml
