<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaqu</name>
  <version>0.0.0</version>
  <description>KAQU 전체 시스템 bring-up 패키지</description>
  <maintainer email="storm5030@naver.com">dongryun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>kaqu_gazebo_sim</exec_depend>
  <exec_depend>kaqu_controller</exec_depend>
  <exec_depend>kaqu_input_manager</exec_depend>
</package>
