<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaqu_controller</name>
  <version>0.0.0</version>
  <description>A controller package for the Kaqu robot.</description>
  <maintainer email="devote010409@gmail.com">apka</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>kaqu_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>kaqu_msgs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
