<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaqu_gazebo_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="choish0107@daum.net">Hajun Choi</maintainer>
  <license>TODO: License declaration</license>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>kaqu_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>rqt_joint_trajectory_controller</build_depend>  -->

  <exec_depend>kaqu_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- <exec_depend>rqt_joint_trajectory_controller</exec_depend> -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_sim_ros2_control</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>kaqu_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>ros2_control</depend>
    <depend>builtin_interfaces</depend>
    <depend>sensor_msgs</depend>
    <depend>ros_gz_sim</depend>
    <depend>ros_gz_sim_ros2_control</depend>
    <depend>ros_gz_bridge</depend>
    <depend>ros_gz_image</depend>
    <depend>tf2</depend>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>