<?xml version="1.0"?>
<package format="3">
  <name>kaqu_input_manager</name>
  <version>0.0.0</version>
  <description>Xbox Controller Teleoperation Node</description>
  <maintainer email="choish0107@daum.net">Hajun Choi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kaqu_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>kaqu_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <exec_depend>python3-pyqt5</exec_depend>


  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>joy</depend>
    <depend>control_msgs</depend>
    <depend>std_msgs</depend>
    <depend>kaqu_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>trajectory_msgs</depend>
  </export>
</package>
